# ALASI---Disaster-Mapping

./: .env  .env.example  .gitignore  Dockerfile  orthomosaic_testing.ipynb  pyproject.toml  requirements.txt  testing.ipynb  testing.py
ai/custom_types/: datasets.py  training.py
ai/datasets/: __init__.py  rescuenet_dataset.py
ai/model/: DecoderHead.py  DisasterSiteMap.py  FeatureDecoderHead.py  TriheadSegmentationModel.py  UncertaintyLossWeighting.py
ai/runs/segment/train/: args.yaml
ai/script/training/: 2_create_yolo_seg.ipynb
ai/script/utils/: eval.py  training.py
ai/training/: 1_create_additional_data.ipynb  2_training.ipynb  2_training.py  new_testing.ipynb  testing.ipynb
ai/utils/: augmentations.py  labels.py  runpod.py  storage.py  training.py
datasets/: RescueNet.yaml  __init__.py  rescuenet_dataset.py
model/: DisasterSiteMap.py  OrthomosaicStitchingAlgorithm.py  RGBDSegmentationModel.py  RGBSurfaceNormalSegmentationModel.py
runs/segment/train/: args.yaml
script/final_model/: FinalModel.py  UncertaintyLossWeighting.py
script/training/: 1_create_depth_map.ipynb  2_create_yolo_seg.ipynb  2_yolo_feature_distillation.ipynb  3_yolo_feature_distillation.ipynb  augmentations.py  rescuenet_dataset.py
script/utils/: labels.py
