[project]
name = "vision-ai-development"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.13.0",
    "addict==2.4.0",
    "albumentationsx==2.2.2",
    "cython==3.2.4",
    "e3nn==0.6.0",
    "einops==0.8.2",
    "evo==1.36.3",
    "geffnet==1.0.2",
    "huggingface-hub==1.12.0",
    "kornia==0.8.2",
    "matplotlib==3.10.9",
    "moviepy==2.2.1",
    "ninja>=1.13.0",
    "numpy==2.4.4",
    "omegaconf==2.3.0",
    "open3d==0.19.0",
    "opencv-contrib-python==4.13.0.92",
    "peft==0.19.1",
    "pillow==11.3.0",
    "plyfile==1.1.3",
    "pycolmap==4.0.4",
    "pydantic==2.13.3",
    "runpod==1.9.1",
    "safetensors==0.7.0",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "timm>=1.0.27",
    "tqdm==4.67.3",
    "transformers==5.6.2",
    "trimesh==4.12.2",
    "ultralytics==8.4.70",
    "uv==0.11.23",
]
